fixed alignment on official / unofficial toggle

--- a/styles/clubsListStyle.css
+++ b/styles/clubsListStyle.css
@@ -13,11 +13,7 @@
     border: none;
 }
 
-#officialToggle {
-    display: inline-block;
-}
-
-#unofficialToggle {
+#officialToggle, #unofficialToggle {
     display: inline-block;
 }
 
